// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ndjson-stream snapshots > header-only.cast — empty events 1`] = `
{
  "term": {
    "cols": 80,
    "rows": 24,
  },
  "title": "Empty session",
  "version": 3,
}
`;

exports[`ndjson-stream snapshots > malformed-json.cast — handles malformed lines gracefully 1`] = `
{
  "term": {
    "cols": 80,
    "rows": 24,
  },
  "version": 3,
}
`;

exports[`ndjson-stream snapshots > malformed-json.cast — handles malformed lines gracefully 2`] = `2`;

exports[`ndjson-stream snapshots > synthetic-tui-session.cast — header and event count 1`] = `
{
  "term": {
    "cols": 80,
    "rows": 24,
    "type": "xterm-256color",
  },
  "title": "Synthetic TUI Session",
  "version": 3,
}
`;

exports[`ndjson-stream snapshots > synthetic-tui-session.cast — header and event count 2`] = `24`;

exports[`ndjson-stream snapshots > valid-with-markers.cast — first 5 events 1`] = `
[
  [
    0.1,
    "o",
    "[1;34m$ npm test[0m
",
  ],
  [
    0.2,
    "o",
    "Running CI pipeline...
",
  ],
  [
    0.3,
    "o",
    "
",
  ],
  [
    0.5,
    "m",
    "Test Execution",
  ],
  [
    0.6,
    "o",
    "[1m  PASS [0m[32m src/utils.test.ts[0m
",
  ],
]
`;

exports[`ndjson-stream snapshots > valid-with-markers.cast — header snapshot 1`] = `
{
  "env": {
    "SHELL": "/bin/bash",
    "TERM": "xterm-256color",
  },
  "term": {
    "cols": 120,
    "rows": 40,
    "type": "xterm-256color",
  },
  "title": "CI Pipeline Run",
  "version": 3,
}
`;

exports[`ndjson-stream snapshots > valid-with-markers.cast — header snapshot 2`] = `32`;

exports[`ndjson-stream snapshots > valid-without-markers.cast — header and event count 1`] = `
{
  "term": {
    "cols": 120,
    "rows": 40,
  },
  "version": 3,
}
`;

exports[`ndjson-stream snapshots > valid-without-markers.cast — header and event count 2`] = `4`;
